--- a/lab6/builfunc.ipynb
+++ b/lab6/builfunc.ipynb
@@ -72,6 +72,79 @@
    "source": [
     "3 ) Write a Python program with builtin function that checks whether a passed string is palindrome or not"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pal(s):\n",
+    "    s = s.lower()\n",
+    "    return s == s[::-1]\n",
+    "\n",
+    "s = input()\n",
+    "print(pal(s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4 ) Write a Python program that invoke square root function after specific milliseconds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square root of  10  after  20  milleseconds is  3.1622776601683795\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time \n",
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "\n",
+    "time.sleep(0.001*b)\n",
+    "\n",
+    "print(\"Square root of \", a, \" after \", b, \" milleseconds is \", a**(1/2) )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5 )  Write a Python program with builtin function that returns True if all elements of the tuple are true."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tru(a):\n",
+    "    return all(a)\n",
+    "\n",
+    "a = (1, True, 'Hello', [1,2,3])\n",
+    "\n",
+    "print(tru(a))"
+   ]
   }
  ],
  "metadata": {
